fix issue where artist text was not centered in the library list

--- a/public/css/library.css
+++ b/public/css/library.css
@@ -137,6 +137,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 49%;
 }
 
